--- a/deploy/jared-website.conf
+++ b/deploy/jared-website.conf
@@ -1,10 +1,29 @@
 server {
-   listen 0.0.0.0:80;
-   listen [::]:80;
-
+   server_name jared-earl.com;
    root /srv/jared-website;
 
    location / {
       try_files $uri $uri/ /index.html;
    }
+
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/jared-earl.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/jared-earl.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = jared-earl.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+   listen 0.0.0.0:80;
+   listen [::]:80;
+   server_name jared-earl.com;
+    return 404; # managed by Certbot
+
+
 }
